--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h1 class="name">Vlad Moskalenko</h1>
       </div>
       <span class="position">Web-developer</span>
-    <address class="adress">Russia, Chelyabinsk</address>
+    <address class="adress">Russia, Ufa</address>
       <div class="about-contacts">
            <a class="about-contacts_link" href="#"><b> t:</b> +7996622624 </a>
            <a class="about-contacts_link" href="#"<b> |e: </b> sorumero@gmail.com |</a>
@@ -88,45 +88,67 @@
         Aug 2019 - Febr 2020
       </span>
       <p class="list-item__text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia alias cupiditate, nam sint eveniet, odio sed magnam, explicabo voluptas reiciendis veniam laborum commodi at recusandae reprehenderit. Ducimus culpa magni et!
+Ведение проектов агенства.
+Постановка и контроль выполнения задач линейными специалистами
+Общение с клиентами
+Выполнение заданий от главного маркетолога агенства
       </p>
     </li>
     <li class= list-item>
       <h4 class="list-item__tittle">
-        Company 2
+        Специалист по работе с маркетплейсами
       </h4>
       <span class="list-item__date">
-        Aug 2019 - Febr 2020
+        May 2020 - May 2021
       </span>
       <p class="list-item__text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos consequatur iure est laboriosam dolorum quasi officiis quae delectus dolores ipsam, sapiente consequuntur eum error veritatis voluptatum tempore voluptatibus rerum numquam. Maiores, ipsam reiciendis aliquam aut nulla nesciunt quidem eveniet tempora.
+        Выполнение полного цикла работ по выведению поставщиков на маркетплейсы и продвижения (FBS и FBO)
+- Регистрация кабинетов (Wildberries, Ozon, Яндекс Маркет)
+- Работа со спецификациями (Создание карточек товара, просчёт экономики, работа с фото/видео материалами, написание ТЗ для подрядчиков)
+- Создание маркировки товара в системе Мой Склад и на порталах МП
+- Создание и сопровождение поставки (От загрузки заказа и формирования маркировки, до фактической отгрузки на склад маркетплейса + работы с тех.поддержкой/транспортной компанией при наличии расхождений/трудностей с приемкой)
+- Работы по продвижению товара (Участие в акциях, информационное усиление карточек, проведение самовыкупов, работа с ключами, настройка и ведение рекламных компаний)
+- Контроль остатков
+- Работа с аналитикой (Анализ отчёт и формирование стратегии оптимизации и увеличения продаж)
+- Активная коммуникация и консультирования поставщиков по текущей ситуации, ценообразованию, а также стратегии работы на ближайшую перспективу
+- Работа с подрядчиками (дизайнерами), транспортными компаниями
       </p>
     </li>
     <li class= list-item>
       <h4 class="list-item__tittle">
-        Company 3
+        QA Engineer (Trainee)
       </h4>
       <span class="list-item__date">
-        Aug 2019 - Febr 2020
+        Jun 2021 - Until today
       </span>
       <p class="list-item__text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eum voluptatum totam, consectetur repellat laboriosam rem deleniti, obcaecati, quos vitae nobis id expedita quae sint.
+        
       </p>
       </li>
     </ul>
       <div class="expirience">
     <h2 class="Heading Heading_dark">Education</h2>
            </div>
-  <ul class="list">
+  
+   <ul class="list">
     <li class= "list-item list-item_noborder">
       <h4 class="list-item__tittle">
-       Taurida National University
+       Киевский техникум электронных приборов
+      </h4>
+      <span class="list-item__date">
+        Sept 2012 - Jul 2016
+      </span>
+      <p class="list-item__text">
+       Младший специалист по специальности "Радио-технические измерения"
+    <li class= "list-item list-item_noborder">
+      <h4 class="list-item__tittle">
+       ТНУ им. В.И. Вернадского
       </h4>
       <span class="list-item__date">
         Sept 2016 - Jul 2020
       </span>
       <p class="list-item__text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia alias cupiditate, nam sint eveniet, odio sed magnam, explicabo voluptas reiciendis veniam laborum commodi at recusandae reprehenderit. Ducimus culpa magni et!
+       Бакалавр по специальности "Общая психология"
       </p>
     </li>
     </ul>
