--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
@@ -27,12 +27,12 @@
       <a href="mailto:sorumero@gmail.com" class="contacts-link">sorumero@gmail.com</a>
     </div></div>
   <div class="contacts-item"><div class="contacts-tittle">
-      <h3><i class="fas fa-phone-square-alt"></i> Web</h3>
-      <a href="tel:+79966922624" class="contacts-link">+79966922624</a>
+      <h3><i class="fab fa-vk"></i> Web</h3>
+      <a href="https://vk.com/id22310349" class="contacts-link">https://vk.com/id22310349</a>
     </div></div>
   <div class="contacts-item"><div class="contacts-tittle">
-      <h3><i class="fas fa-phone-square-alt"></i> Adress</h3>
-      <a href="tel:+79966922624" class="contacts-link">+79966922624</a>
+      <h3><i class="fas fa-map-marker-alt"></i> Adress</h3>
+      <a href="https://www.google.com/maps/place/%D0%A3%D1%84%D0%B0,+%D0%A0%D0%B5%D1%81%D0%BF.+%D0%91%D0%B0%D1%88%D0%BA%D0%BE%D1%80%D1%82%D0%BE%D1%81%D1%82%D0%B0%D0%BD/@54.7406256,55.7409398,10z/data=!3m1!4b1!4m5!3m4!1s0x43d93a259216bce1:0xaceec0921eda92cc!8m2!3d54.734791!4d55.9578555" class="contacts-link">Россия, г. Уфа</a>
     </div></div>
 </div>
       </div>
